# steplo

./: Cargo.toml  README.md  rustfmt.toml
asm_compiler/: Cargo.toml
book/: book.toml
compiler/: Cargo.toml
compiler2/: Cargo.toml
examples/: add.lo  array.lo  array_expr_index.lo  array_literal_params.hscm  barchart.lo  basic.lo  cast.lo  cast_error.lo  cast_ok.lo  cmp.hscm  coerce.lo  constant_trivial_var_inlining_exception.lo  control_exprs_in_binary_op.lo  delete_duplicates.lo  double_compound.lo  enum_compound.lo  hel.lo  (+34 more)
high_compiler/: Cargo.toml  foo.rs
high_compiler/examples/: add.hscm  add.kr  add.lo  array.hscm  array.lo  array_expr_index.hscm  array_expr_index.lo  array_ident_index.hscm  array_indexing.kr  array_literal.hscm  array_literal_params.hscm  array_params.hscm  basic.hscm  cast.lo  cmp.hscm  copy.hscm  deref.hscm  double_ref.hscm  fizzbuzz.hscm  fizzbuzz.kr  fizzbuzz.lo  func.hscm  if.hscm  if_call.hscm  if_else.hscm  inline_coms.hscm  loop.hscm  malloc.lo  merge_sorted_array.kr  nested_if.hscm  nesting.hscm  nesting_small.hscm  out.hscm  params.hscm  pipeline.hscm  random.lo  rect_area.hscm  rect_area.kr  rect_area.lo  ref_assign.hscm  (+11 more)
high_compiler/examples_opt/: copy.hscm  if_else.hscm  in.hscm  inline_coms.hscm  nesting.hscm  out.hscm  params.hscm  ref_assign.hscm
high_compiler/src/: add_builtins.rs  ast.rs  ast_error.rs  ast_parse.rs  compile.rs  compile_error.rs  compile_old.rs  grammar_ast.rs  grammar_parse.rs  grammar_to_logic.rs  link.rs  logic_ast.rs  main.rs  parse.rs  src_pos.rs  srced.rs  token.rs  token_feed.rs  typecheck.rs
(+125 files in other folders)
