[package]
name = "high_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
shared = { path = "../shared" }
asm_compiler = { path = "../asm_compiler" }
mem_opt = { path = "../mem_opt" }
itertools = "0.14.0"
uuid = "1.13.1"
nom = "8.0.0"
colored = "3.0.0"
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
